# cmake

hello-world/: CMakeLists.txt
hello-world/src/: main.cpp
hello-world/src/model1/: m1.cpp  m1.h
hello-world/src/model2/: m2.cpp  m2.h
